# dockmate

./: .env  Dockerfile  README.md  build.sh  docker-compose.yml  kernel.py  main.py  pyproject.toml
src/docker_watch/: __init__.py  click.py  constants.py  kernel.py
src/dockerautoupdate/: constants.py
src/dockerwatch/: constants.py
src/dockmate/: config.py  constants.py
