[project]
name            = "dockerwatch"
version         = "0.1.3"
description     = "Monitors a list of Docker containers and upgrades them when new images are released."
readme          = "README.md"
authors         = [{ name = "Antrax", email = "fredcox@gmail.com" }]
requires-python = ">=3.13"
dependencies    = ["click>=8.1.8", "confz>=2.1.0", "docker>=7.1.0", "rich>=14.0.0"]

[project.scripts]
dockerwatch = "dockerwatch:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
